--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 
 * Link To Project
-- [[./index.html][Meowser]]
+- [[./meowser.html][Meowser]]
 
 * Meowser
 This is a web app that allows a user to select a cat breed that was scraped from Wikipedia's list of cat breeds, and then an image of that breed, the related Wikipedia article, or a random fact about cats in general.
